// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a loading animation 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 bYmEmi Button__StyledControl-sc-160jtek-2 jYMwUb"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="false"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      >
        <img
          alt="loading"
          class="loader right"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a danger button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 ghcDhz Button__StyledControl-sc-160jtek-2 jqvdFa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a disabled button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 bYmEmi Button__StyledControl-sc-160jtek-2 jYMwUb"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a link button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 kRAexB Button__StyledControl-sc-160jtek-2 jqvdFa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a primary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hQaKph Button__StyledControl-sc-160jtek-2 jqvdFa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a secondary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 iLhqxU Button__StyledControl-sc-160jtek-2 jqvdFa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a warning button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 kSPaxA Button__StyledControl-sc-160jtek-2 jqvdFa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ewYeZJ Button__StyledBox-sc-160jtek-0 ebXqIp"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 iLhqxU Button__StyledControl-sc-160jtek-2 jqvdFa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 auBDZ Button__StyledLoadingIndicator-sc-160jtek-1 gIximQ"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;
